--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"less": "^4.2.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"sass": "^1.75.0",
 		"svelte": "^4.2.7",
+		"svelte-preprocess": "^5.1.4",
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
