--- a/.netlify/server/.vite/manifest.json
+++ b/.netlify/server/.vite/manifest.json
@@ -54,7 +54,7 @@
       "_ssr.js"
     ],
     "css": [
-      "_app/immutable/assets/_page.Ca1Kymec.css"
+      "_app/immutable/assets/_page.CWIIOsSt.css"
     ]
   }
 }
